--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,24 +69,24 @@
     <Compile Include="Assets\Scripts\OverlayNotConnected.cs" />
     <Compile Include="Assets\Scripts\IPC.cs" />
     <Compile Include="Assets\Scripts\WinApi.cs" />
-    <Compile Include="Assets\Scripts\OverlayLeaderboardPlace.cs" />
     <Compile Include="Assets\Scripts\StreamedTexture.cs" />
     <Compile Include="Assets\Scripts\OverlayVoiceOf.cs" />
     <Compile Include="Assets\Scripts\OverlayCustom.cs" />
     <Compile Include="Assets\Scripts\LiveDataRaceStatus.cs" />
     <Compile Include="Assets\Scripts\LiveDataVoiceOf.cs" />
     <Compile Include="Assets\Scripts\OverlaySubtitle.cs" />
+    <Compile Include="Assets\Scripts\LiveDataLeaderboardSlot.cs" />
     <Compile Include="Assets\Scripts\OverlayLeaderboard.cs" />
     <Compile Include="Assets\Scripts\TransparentWindow.cs" />
     <Compile Include="Assets\Scripts\ImageSettings.cs" />
     <Compile Include="Assets\Scripts\LiveDataIntroDriver.cs" />
     <Compile Include="Assets\Scripts\StreamingTextures.cs" />
+    <Compile Include="Assets\Scripts\OverlayLeaderboardSlot.cs" />
     <Compile Include="Assets\Scripts\LiveDataLeaderboard.cs" />
     <Compile Include="Assets\Scripts\LiveDataIntro.cs" />
     <Compile Include="Assets\Scripts\LiveData.cs" />
     <Compile Include="Assets\Scripts\OverlayIntroDriver.cs" />
     <Compile Include="Assets\Scripts\OverlayRaceStatus.cs" />
-    <Compile Include="Assets\Scripts\LiveDataLeaderboardPlace.cs" />
     <Compile Include="Assets\Scripts\SettingsOverlay.cs" />
     <Compile Include="Assets\Scripts\OverlayIntro.cs" />
     <Compile Include="Assets\Scripts\Program.cs" />
