--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Assets\Scripts\StreamedTexture.cs" />
     <Compile Include="Assets\Scripts\OverlayVoiceOf.cs" />
     <Compile Include="Assets\Scripts\OverlayCustom.cs" />
+    <Compile Include="Assets\Scripts\LiveDataDriver.cs" />
     <Compile Include="Assets\Scripts\OverlayStartLights.cs" />
     <Compile Include="Assets\Scripts\LiveDataRaceStatus.cs" />
     <Compile Include="Assets\Scripts\LiveDataTrackMapCar.cs" />
@@ -86,6 +87,7 @@
     <Compile Include="Assets\Scripts\LiveDataLeaderboardSlot.cs" />
     <Compile Include="Assets\Scripts\OverlayLeaderboard.cs" />
     <Compile Include="Assets\Scripts\TransparentWindow.cs" />
+    <Compile Include="Assets\Scripts\OverlayLeaderboardArray.cs" />
     <Compile Include="Assets\Scripts\ImageSettings.cs" />
     <Compile Include="Assets\Scripts\LiveDataIntroDriver.cs" />
     <Compile Include="Assets\Scripts\StreamingTextures.cs" />
