--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -81,15 +81,18 @@
     <Compile Include="Assets\Scripts\LiveDataDriver.cs" />
     <Compile Include="Assets\Scripts\OverlayStartLights.cs" />
     <Compile Include="Assets\Scripts\LiveDataRaceStatus.cs" />
+    <Compile Include="Assets\Scripts\OverlayRaceResultsSlot.cs" />
     <Compile Include="Assets\Scripts\LiveDataTrackMapCar.cs" />
     <Compile Include="Assets\Scripts\LiveDataVoiceOf.cs" />
     <Compile Include="Assets\Scripts\OverlaySubtitle.cs" />
     <Compile Include="Assets\Scripts\LiveDataLeaderboardSlot.cs" />
     <Compile Include="Assets\Scripts\OverlayLeaderboard.cs" />
     <Compile Include="Assets\Scripts\TransparentWindow.cs" />
+    <Compile Include="Assets\Scripts\OverlayRaceResultsArray.cs" />
     <Compile Include="Assets\Scripts\OverlayLeaderboardArray.cs" />
     <Compile Include="Assets\Scripts\ImageSettings.cs" />
     <Compile Include="Assets\Scripts\LiveDataIntroDriver.cs" />
+    <Compile Include="Assets\Scripts\OverlayRaceResults.cs" />
     <Compile Include="Assets\Scripts\StreamingTextures.cs" />
     <Compile Include="Assets\Scripts\OverlayLeaderboardSlot.cs" />
     <Compile Include="Assets\Scripts\LiveDataLeaderboard.cs" />
