--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,15 +58,16 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.0f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\WebCam.cs" />
     <Compile Include="Assets\Scripts\OverlayBattleChyron.cs" />
     <Compile Include="Assets\Scripts\SteamVROverlay.cs" />
+    <Compile Include="Assets\Scripts\BidirectionalStreaming.cs" />
     <Compile Include="Assets\Scripts\SettingsImage.cs" />
     <Compile Include="Assets\Scripts\OverlayTrackMap.cs" />
     <Compile Include="Assets\Scripts\TextSettings.cs" />
     <Compile Include="Assets\Scripts\OverlayTrackMapCar.cs" />
     <Compile Include="Assets\Scripts\LiveDataSteamVr.cs" />
     <Compile Include="Assets\Scripts\LiveDataControlPanel.cs" />
+    <Compile Include="Assets\Scripts\OverlayWebcamStreaming.cs" />
     <Compile Include="Assets\Scripts\SettingsText.cs" />
     <Compile Include="Assets\Scripts\Border.cs" />
     <Compile Include="Assets\Scripts\LiveDataStartLights.cs" />
