--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -82,15 +82,17 @@
     <Compile Include="Assets\Scripts\LiveDataTrackMap.cs" />
     <Compile Include="Assets\Scripts\IPC.cs" />
     <Compile Include="Assets\Scripts\WinApi.cs" />
+    <Compile Include="Assets\Scripts\OverlayRaceResultSlot.cs" />
     <Compile Include="Assets\Scripts\StreamedTexture.cs" />
     <Compile Include="Assets\Scripts\OverlayTrainer.cs" />
+    <Compile Include="Assets\Scripts\OverlayRaceResult.cs" />
     <Compile Include="Assets\Scripts\OverlayVoiceOf.cs" />
     <Compile Include="Assets\Scripts\OverlayCustom.cs" />
     <Compile Include="Assets\Scripts\LiveDataDriver.cs" />
     <Compile Include="Assets\Scripts\OverlayChyron.cs" />
     <Compile Include="Assets\Scripts\OverlayStartLights.cs" />
     <Compile Include="Assets\Scripts\LiveDataRaceStatus.cs" />
-    <Compile Include="Assets\Scripts\OverlayRaceResultsSlot.cs" />
+    <Compile Include="Assets\Scripts\LiveDataRaceResult.cs" />
     <Compile Include="Assets\Scripts\LiveDataTrackMapCar.cs" />
     <Compile Include="Assets\Scripts\LiveDataVoiceOf.cs" />
     <Compile Include="Assets\Scripts\OverlaySubtitle.cs" />
@@ -101,14 +103,12 @@
     <Compile Include="Assets\Scripts\OverlayLeaderboard.cs" />
     <Compile Include="Assets\Scripts\OverlaySystemMessage.cs" />
     <Compile Include="Assets\Scripts\TransparentWindow.cs" />
-    <Compile Include="Assets\Scripts\OverlayRaceResultsArray.cs" />
     <Compile Include="Assets\Scripts\OverlayPitLane.cs" />
     <Compile Include="Assets\Scripts\OverlayLeaderboardArray.cs" />
     <Compile Include="Assets\Scripts\LiveDataPitLaneCar.cs" />
     <Compile Include="Assets\Scripts\ImageSettings.cs" />
     <Compile Include="Assets\Scripts\LiveDataChyron.cs" />
     <Compile Include="Assets\Scripts\LiveDataIntroDriver.cs" />
-    <Compile Include="Assets\Scripts\OverlayRaceResults.cs" />
     <Compile Include="Assets\Scripts\StreamingTextures.cs" />
     <Compile Include="Assets\Scripts\LiveDataCustom.cs" />
     <Compile Include="Assets\Scripts\OverlayLeaderboardSlot.cs" />
@@ -121,6 +121,7 @@
     <Compile Include="Assets\Scripts\SettingsOverlay.cs" />
     <Compile Include="Assets\Scripts\LiveDataHud.cs" />
     <Compile Include="Assets\Scripts\OverlayIntro.cs" />
+    <Compile Include="Assets\Scripts\LiveDataRaceResultSlot.cs" />
     <Compile Include="Assets\Scripts\Program.cs" />
   </ItemGroup>
   <ItemGroup>
